# SymMatNP

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
symmatnp/: symmat.py
tests/: test_algebra.py  test_arithmetics.py  test_others.py  utils.py
