[tool.poetry]
name = "symmat"
version = "0.1.0"
description = "SymMat is memory-efficient implementation based on numpy to represent symmetric matrices."
authors = ["Roman Joeres <joeres.roman@web.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
